--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
   --foreground: #171717;
 }
 
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-sm: 480px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 976px;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
